[feat]: Upgrade to Spark4 and scala 2.13 (#444)
* Update to Spark-4, Scala 2.13 and JDK 21

---------

Co-authored-by: Ramachandran A G <ramacg@microsoft.com>